# mocword-data

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile-download  Dockerfile.download  Dockerfile.test  LICENSE  Makefile  NOTICE.txt  README.md  diesel.toml  docker-compose-download.yml  docker-compose.download.yml  docker-compose.test.yml  docker-compose.yml  download.go  download_test.go  entities.go  entrypoint.sh  go.mod  go.sum  my.cnf  powa.sqlite  recipe.json
.github/workflows/: download.yml  go.yml  rust.yml
cmd/mocword_download/: main.go  mocword_download
download/: download.go
entities/: entities.go
migrations/2021-10-02-180654_download/: down.sql  up.sql
migrations/2021-10-11-155535_download/: down.sql  up.sql
migrations/2021-11-06-143659_one_gram_scores/: down.sql  up.sql
migrations/2021-11-06-143704_two_gram_scores/: down.sql  up.sql
migrations/2021-11-06-143707_three_gram_scores/: down.sql  up.sql
migrations/2021-11-06-143711_four_gram_scores/: down.sql  up.sql
migrations/2021-11-06-143716_five_gram_scores/: down.sql  up.sql
migrations/2021-11-06-143734_one_grams/: down.sql  up.sql
migrations/2021-11-06-143737_two_grams/: down.sql  up.sql
migrations/2021-11-06-143740_three_grams/: down.sql  up.sql
migrations/2021-11-06-143746_four_grams/: down.sql  up.sql
migrations/2021-11-06-143749_five_grams/: down.sql  up.sql
migrations/2021-11-06-143800_fetched_files/: down.sql  up.sql
model/: model.go
sql/: 01-trim.sql  02-build.sql
src/: cache.rs  download.rs  lib.rs  main.rs  models.rs  schema.rs
(+3 files in other folders)
