[package]
name = "mocword-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
backoff = "0.3"
clap = "2.33"
crossbeam = "0.8"
diesel = { version = "1.4", features = ["mysql"]  }
diesel_migrations = "1.4"
log = "0.4"
simplelog = "0.10"
thiserror = "1.0"
