[package]
name = "mocword-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "2.33"
crossbeam = "0.8"
diesel = { version = "1.4", features = ["mysql", "r2d2"]  }
diesel_migrations = "1.4"
exponential-backoff = "1.0"
log = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
simplelog = "0.10"
thiserror = "1.0"
threadpool = "1.8"
